--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,6 +5,7 @@ html
 		title= title
 		meta(name='viewport' content='width=device-width, user-scalable=no')
 		meta(http-equiv='X-UA-Compatible' content='IE=edge')
+		meta(http-equiv="Content-Security-Policy" content="default-src 'self' data:gap: http://13.124.195.111 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; script-src 'sha256-Mz2VLjSog1hnHKahuUsOyu+ZmAg5lvv0iDoiqqlNUzc='")
 		link(rel="stylesheet" href="/main.css")
 	body
 	.container
